--- a/_posts/2016-02-19-journal.md
+++ b/_posts/2016-02-19-journal.md
@@ -1,24 +1,11 @@
 ---
 layout: post
+published: true
 ---
+
 
 I woke up this morning around 05:30 and by 06:00 I was out the door, getting ready to bike home. Unfortunately, somebody else made the decision that they needed the lights on my bike more than I do, so I'll be without a bike light for at least a few days. Not super great, but worse things have happened to better people.
 
-My plans for the day:
+I ended up drinking a bunch of coffee, going climbing, getting groceries, chugging soylent, grabbing a beer with Sam, and hanging out with Vlad and Victoria for the rest of the night. I totally spaced asking Sam what he thought about this project though, I wanted to talk to him about that.
 
-- Getting another bike light
-- Drinking about eight more gallons of coffee
-- [Molding Mobility](http://phraktured.net/molding-mobility.html)
-- Going climbing for ~45 minutes
-- [Starting Stretching](http://phraktured.net/starting-stretching.html)
-- Work for 
-- Getting groceries
-- Chugging ~2000 kcal of Soylent
-- Figuring out what to make for dinner
-- Actually making dinner
-- Making plans for the weekend
-  - Deadpool?
-  - Winery?
-  - I've still never been to Ground Kontrol
-  - Massage on Sunday? 
-  - I want to get feedback from Sam on whether or not this journal is an awful idea
+I probably could've cleaned my apartment, but it really wasn't a total mess. I ran out of trash bags though, so that's something that needs to be dealt with immediately.
